--- a/pick-front/deployment.yaml
+++ b/pick-front/deployment.yaml
@@ -12,3 +12,14 @@ spec:
       containers:
       - name: pick-front
         image: ashmna/pick-front
+        env:
+        - name: MONGODB_NAME
+          value: pick
+        - name: MONGODB_HOST
+          value: mongo
+        - name: MONGODB_PORT
+          value: 27017
+        - name: MONGODB_USERNAME
+          value: ****************
+        - name: MONGODB_PASSWORD
+          value: ****************
