--- a/pick/deployment.yaml
+++ b/pick/deployment.yaml
@@ -12,3 +12,14 @@ spec:
       containers:
       - name: pick
         image: ashmna/pick
+        env:
+        - name: MONGODB_NAME
+          value: "pick"
+        - name: MONGODB_HOST
+          value: "mongo"
+        - name: MONGODB_PORT
+          value: "27017"
+        - name: MONGODB_USERNAME
+          value: "********"
+        - name: MONGODB_PASSWORD
+          value: "********"
