--- a/pick-front/deployment.yaml
+++ b/pick-front/deployment.yaml
@@ -12,3 +12,6 @@ spec:
       containers:
       - name: pick-front
         image: ashmna/pick-front
+        imagePullPolicy: Always
+երեվան => երևան
+երևան => երեվան
