--- a/spiderslab-site/deployment.yaml
+++ b/spiderslab-site/deployment.yaml
@@ -13,6 +13,10 @@ spec:
       - name: spiderslab-site
         image: ashmna/spiderslab-site
         imagePullPolicy: Always
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3001
 #        volumeMounts:
 #        - mountPath: /usr/src/app/data
 #          name: pick-data
