--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -2,26 +2,26 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: spiderslab
-  annotations:
-    kubernetes.io/tls-acme: "true"
-    kubernetes.io/ingress.class: "gce"
+#  annotations:
+#    kubernetes.io/tls-acme: "true"
+#    kubernetes.io/ingress.class: "gce"
 spec:
 #  backend:
 #    serviceName: test
 #    servicePort: 80
-  tls:
-    - hosts:
-      - spiderslab.com
-      - pick.spiderslab.com
-      secretName: spiderslab-tls
+#  tls:
+#    - hosts:
+#      - spiderslab.com
+#      - pick.spiderslab.com
+#      secretName: spiderslab-tls
   rules:
     - host: spiderslab.com
       http:
         paths:
-        - path: /api/pick/*
-          backend:
-            serviceName: pick
-            servicePort: 80
+#        - path: /api/pick/*
+#          backend:
+#            serviceName: pick
+#            servicePort: 80
         - path: /*
           backend:
             serviceName: spiderslab-site
