--- a/pick-front/service.yaml
+++ b/pick-front/service.yaml
@@ -5,7 +5,8 @@ metadata:
   labels:
     app: pick-front
 spec:
-  type: LoadBalancer
+#  type: LoadBalancer
+  type: NodePort
   selector:
     app: pick-front
   ports:
